dimension clipped at QS Desktop fixed

--- a/src/qlik-multi-kpi.less
+++ b/src/qlik-multi-kpi.less
@@ -199,6 +199,7 @@
         display: block;
         padding: 10px 5px;
         border-bottom: solid 1px rgb(166,166,166) !important;
+        box-sizing: content-box;
       }
 
       >.statistics {
